[tool.poetry]
name = "repl_python3_totalwar-ripoff"
version = "0.1.0"
description = ""
authors = ["011569TimothyGo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
guizero = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
